# summarizer

./: README.md  arch.md  create-table.sql  pyproject.toml
scripts/: setup-db.sh
src/: ai.py  cache.py  config.py  db.py  docs.py  main.py  models.py  parse.py  scraper.py  worker.py
